--- a/package.json
+++ b/package.json
@@ -5,14 +5,16 @@
   "version": "0.1.0",
   "author": "zkohi <kohiandrew@gmail.com>",
   "dependencies": {
-    "gatsby": "^2.2.2",
+    "babel-plugin-styled-components": "^1.10.0",
+    "gatsby": "^2.3.4",
     "gatsby-image": "^2.0.34",
     "gatsby-plugin-feed": "^2.0.15",
     "gatsby-plugin-google-analytics": "^2.0.17",
     "gatsby-plugin-manifest": "^2.0.24",
     "gatsby-plugin-offline": "^2.0.25",
     "gatsby-plugin-react-helmet": "^3.0.10",
-    "gatsby-plugin-sharp": "^2.0.29",
+    "gatsby-plugin-sharp": "^2.0.32",
+    "gatsby-plugin-styled-components": "^3.0.7",
     "gatsby-plugin-typescript": "^2.0.11",
     "gatsby-plugin-typography": "^2.2.10",
     "gatsby-remark-copy-linked-files": "^2.0.11",
@@ -28,6 +30,7 @@
     "react-dom": "^16.8.4",
     "react-helmet": "^5.2.0",
     "react-typography": "^0.16.19",
+    "styled-components": "^4.2.0",
     "typeface-merriweather": "0.0.72",
     "typeface-montserrat": "0.0.54",
     "typography": "^0.16.19",
@@ -35,6 +38,7 @@
   },
   "devDependencies": {
     "@types/react-helmet": "^5.0.8",
+    "@types/styled-components": "^4.1.12",
     "@types/typography": "^0.16.2",
     "prettier": "^1.16.4"
   },
